@@ -20,7 +20,9 @@
 // Use at your own risk!
 // ==========================================================
 
+#ifdef _MSC_VER 
 #pragma warning (disable : 4786) // identifier was truncated to 'number' characters
+#endif 
 
 #ifndef PLUGIN_H
 #define PLUGIN_H
